# Hack

.claude/: launch.json  settings.local.json
Hack/echo/: .gitignore  README.md  package.json
Hack/echo/app/: package-lock.json  package.json
Hack/echo/app/prisma/: schema.prisma  seed.mjs
Hack/echo/app/scripts/: unifold-check.mjs  unifold-deposit-test.mjs  unifold-webhook-test.mjs
Hack/echo/app/src/app/: globals.css  layout.tsx
Hack/echo/app/src/lib/: accounts.ts  (+12 more)
Hack/echo/tests/: echo_protocol.ts
echo/: .gitignore  Anchor.toml  package-lock.json  package.json  rust-toolchain.toml
echo/app/: .env.example  package-lock.json  package.json  tsconfig.json
echo/app/scripts/: mongo-ping.mjs  unifold-create-test.mjs  unifold-discover-dest.mjs
echo/app/src/: middleware.ts
echo/app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
echo/app/src/components/: BetPanel.tsx  CommentFeed.tsx  CreateMarketForm.tsx  CreateMarketModal.tsx  DepositModal.tsx  Discussion.tsx  FeedCard.tsx  LiveTicker.tsx  LiveTrades.tsx  LoginPanel.tsx  MarketCard.tsx  NowTradingStrip.tsx  OddsArena3D.tsx  OddsChart.tsx  SearchBar.tsx  SiwsButton.tsx  StatusTabs.tsx  TopNav.tsx  TradingInterface.tsx  UserName.tsx  WinCelebration.tsx  YieldRoutingModal.tsx  primitives.tsx
echo/app/src/lib/: accounts.ts  auth.ts  confetti.ts  depositLedger.ts  mock.ts  mongo.ts  program.ts  siws.ts  store.file.ts  store.mongo.ts  store.ts  unifold.ts
echo/app/src/store/: useEchoStore.ts
echo/programs/echo_protocol/: Cargo.toml
echo/programs/echo_protocol/src/: errors.rs  lib.rs  state.rs
(+47 files in other folders)
