[package]
name = "echo-protocol"
version = "0.1.0"
description = "Echo: socially-gated parimutuel prediction markets with Programmable Yield Routing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "echo_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
